[gd_scene load_steps=3 format=3 uid="uid://l25ehdaamqdb"]

[ext_resource type="Script" path="res://Scripts/Menus/Options.gd" id="1_4jx5w"]
[ext_resource type="Theme" uid="uid://cdsf3tai07fob" path="res://Resources/Theme/MainTheme.tres" id="2_afn72"]

[node name="Options" type="CanvasLayer" groups=["Options"]]
layer = 10
visible = false
script = ExtResource("1_4jx5w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_afn72")

[node name="OptionsBackground" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.690196, 0.34902, 0.309804, 1)

[node name="ReturnButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -148.0
offset_right = 70.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Return
"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 19.0
offset_top = 10.0
offset_right = 258.0
offset_bottom = 38.0
text = "TODO: add settings n stuff"

[node name="Sound_Options_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 135.0
offset_bottom = 86.0
text = "Sound Options"

[node name="Sound_Options_Container" type="GridContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 1900.0
offset_bottom = 900.0
columns = 2

[node name="Master_Label" type="Label" parent="Control/Sound_Options_Container"]
layout_mode = 2
text = "Master Volume"

[node name="Master_Slider" type="HSlider" parent="Control/Sound_Options_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
max_value = 1.0
step = 0.05

[node name="Music_Label" type="Label" parent="Control/Sound_Options_Container"]
layout_mode = 2
text = "Music Volume"

[node name="Music_Slider" type="HSlider" parent="Control/Sound_Options_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
max_value = 1.0
step = 0.05

[node name="SFX_Label" type="Label" parent="Control/Sound_Options_Container"]
layout_mode = 2
text = "SFX Volume"

[node name="SFX_Slider" type="HSlider" parent="Control/Sound_Options_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
max_value = 1.0
step = 0.05

[node name="UI_Label" type="Label" parent="Control/Sound_Options_Container"]
layout_mode = 2
text = "UI Volume"

[node name="UI_Slider" type="HSlider" parent="Control/Sound_Options_Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
max_value = 1.0
step = 0.05

[connection signal="pressed" from="Control/ReturnButton" to="." method="_set_open" binds= [false]]
[connection signal="value_changed" from="Control/Sound_Options_Container/Master_Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Control/Sound_Options_Container/Music_Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/Sound_Options_Container/SFX_Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="Control/Sound_Options_Container/UI_Slider" to="." method="_on_ui_slider_value_changed"]
